---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n            ans <- flights[, .(arr_delay, dep_delay)]\n            DT[,.(V4.Sum=sum(V4)), by=V1][order(-V1)]\n            DT[,':='(V1=round(exp(V1),2), V2=LETTERS[4:6])][]\n            DT[,lapply(.SD,sum),by=V2, # comment\n                .SDcols=c(\"V3\",\"V4\")]\n        \"#\n})"
---
ans <- flights[, .(arr_delay, dep_delay)]
DT[, .(V4.Sum = sum(V4)), by = V1][order(-V1)]
DT[, ":="(V1 = round(exp(V1), 2), V2 = LETTERS[4:6])][]
DT[
  ,
  lapply(.SD, sum),
  by = V2, # comment
  .SDcols = c("V3", "V4")
]
